[package]
name = "cli_mot"
version = "0.1.0"
authors = ["Bret Copeland <bret@atlantisflight.org>"]

[dependencies]
dirs = "2.0.2"
unic-ucd-category = "0.9.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }
